@@ -1,3 +1,10 @@
+2006-08-03  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* src/kahua-httpd.scm:
+	- Fix unexpected error when "/" is requested URI.
+	- Some error output entry added.
+	- Return status 500 when catch unknow error.
+
 2006-08-02  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Fix: now make-kahua-collection collects also new instance
